--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Portoflio Items</h1>
+<h1>Portofolio Items</h1>
 
 <% @portfolio_items.each do |portfolio_item| %>
-    <p><%= portfolio_item.title %></p>
-    <p><%= portfolio_item.subtitle %></p>
-    <p><%= portfolio_item.body %></p>
+    <p>Title: <%= portfolio_item.title %></p>
+    <p>Subtitle: <%= portfolio_item.subtitle %></p>
+    <p>Description: <%= portfolio_item.body %></p>
     <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
 
 <% end %>
