--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,14 +1,14 @@
-<h1>Portofolio Items</h1>
-<%= link_to "Create New Portfolio", new_portfolio_path %>
+<h1>Portfolio Items</h1>
+<%= link_to "Create New Portfolio", new_portfolio_url %>
 
-<%= link_to "new portfolio", new_portfolio_url %>
+<%# <%= link_to "new portfolio", new_portfolio_url %> %>
 
 <% @portfolio_items.each do |portfolio_item| %>
 
-    <p>Title: <%= portfolio_item.title %></p>
+    <p>Title: <%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
     <p>Subtitle: <%= portfolio_item.subtitle %></p>
     <p>Description: <%= portfolio_item.body %></p>
     <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
-    
+    <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+
 <% end %>
