--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,14 +1,22 @@
 <h1>Portfolio Items</h1>
 <%= link_to "Create New Portfolio", new_portfolio_url %>
 
-<%# <%= link_to "new portfolio", new_portfolio_url %> %>
 
 <% @portfolio_items.each do |portfolio_item| %>
 
     <p>Title: <%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
     <p>Subtitle: <%= portfolio_item.subtitle %></p>
     <p>Description: <%= portfolio_item.body %></p>
-    <p><%= image_tag portfolio_item.thumb_image if !portfolio_item.thumb_image.nil? %></p>
-    <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-
+    <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+    <tr>
+    <td><%= link_to "Edit", edit_portfolio_path(portfolio_item) %></td>
+    <td>
+    <%= link_to 'Destroy', portfolio_item,
+              data: {
+                "turbo-method": :delete,
+                
+              } %>
+   
+          <td>
+    </tr>
 <% end %>
