feat: Customized portfolio routes

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,6 +2,6 @@
 
 <%= image_tag @portfolio_items.main_image %>
 
-<h1><%= @portfolio_items.title %></h1>
-<em><%= @portfolio_items.subtitle %></em>
-<p><%= @portfolio_items.body %></p>
+<h1>Title: <%= @portfolio_items.title %></h1>
+<em>Subtitle: <%= @portfolio_items.subtitle %></em>
+<p>Body: <%= @portfolio_items.body %></p>
