--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,7 +4,7 @@
 
 <% @portfolio_items.each do |portfolio_item| %>
 
-    <p>Title: <%= link_to portfolio_item.title, portfolio_path(portfolio_item.id) %></p>
+    <p>Title: <%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></p>
     <p>Subtitle: <%= portfolio_item.subtitle %></p>
     <p>Description: <%= portfolio_item.body %></p>
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
