Implemented form configuration for nested attributes

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -5,3 +5,7 @@
 <h1>Title: <%= @portfolio_items.title %></h1>
 <em>Subtitle: <%= @portfolio_items.subtitle %></em>
 <p>Body: <%= @portfolio_items.body %></p>
+<h2> Technologies Used:</h2>
+<% @portfolio_items.technologies.each do |t| %>
+<p><%= t.name %></p>
+<% end %>
