--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RubyCoursev2react</title>
+    <title><%= @page_title %></title>
+    <meta name="keywords" content="<%= @seo_keywords %>" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -14,13 +15,21 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <section>
+      <section><%= link_to "Home", root_path %></section>
+      <section><%= link_to "About", about_me_path %></section>
+      <section><%= link_to "Contact", contact_path %></section>
+      <section><%= link_to "Blog", blogs_path %></section>
+      <section><%= link_to "Portfolio", portfolios_path %></section>
+
+    </section>
+
       <% if current_user.is_a?(User) %>
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
       <% else %>
         <%= link_to "Register", new_user_registration_path, method: :get %>
         <%= link_to "Login", new_user_session_path, method: :get %>
       <% end %>
-      
     <%= yield %>
 
   <% if session[:source] %>
