--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,8 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <section>
-      <section><%= link_to "Home", root_path %></section>
-      <section><%= link_to "About", about_me_path %></section>
-      <section><%= link_to "Contact", contact_path %></section>
-      <section><%= link_to "Blog", blogs_path %></section>
-      <section><%= link_to "Portfolio", portfolios_path %></section>
+    <%= render "shared/nav" %>
 
-    </section>
 
       <% if current_user.is_a?(User) %>
         <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
