--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -25,14 +25,8 @@
       <% end %>
     <%= yield %>
 
-    <section>
-        <section><%= link_to "Home", root_path %></section>
-        <section><%= link_to "About", about_me_path %></section>
-        <section><%= link_to "Contact", contact_path %></section>
-        <section><%= link_to "Blog", blogs_path %></section>
-        <section><%= link_to "Portfolio", portfolios_path %></section>
-  
-      </section>
+    <%= render "shared/nav" %>
+
 
   <% if session[:source] %>
     <p>Thanks for visiting me from <%= session[:source] %></p>
