--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,22 +15,17 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <section>
-      <section><%= link_to "Home", root_path %></section>
-      <section><%= link_to "About", about_me_path %></section>
-      <section><%= link_to "Contact", contact_path %></section>
-      <section><%= link_to "Blog", blogs_path %></section>
-      <section><%= link_to "Portfolio", portfolios_path %></section>
+    <%= render "shared/nav" %>
 
-    </section>
 
       <% if current_user.is_a?(User) %>
-        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
-      <% else %>
-        <%= link_to "Register", new_user_registration_path, method: :get %>
-        <%= link_to "Login", new_user_session_path, method: :get %>
-      <% end %>
-    <%= yield %>
+      <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
+    <% else %>
+      <%= link_to "Register", new_user_registration_path, method: :get %>
+      <%= link_to "Login", new_user_session_path, method: :get %>
+    <% end %>
+  <%= yield %>
+  
 
   <% if session[:source] %>
     <p>Thanks for visiting me from <%= session[:source] %></p>
