Implemented partials with local data for portfolio form and nav bars

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="<%= location %>">
     <section><%= link_to "Home", root_path %></section>
     <section><%= link_to "About", about_me_path %></section>
     <section><%= link_to "Contact", contact_path %></section>
