--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,8 @@
 
     <%= render "shared/nav", location: 'top' %>
 
+    <%= login_helper %>
 
-      <% if current_user.is_a?(User) %>
-        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %>
-      <% else %>
-        <%= link_to "Register", new_user_registration_path, method: :get %>
-        <%= link_to "Login", new_user_session_path, method: :get %>
-      <% end %>
     <%= yield %>
 
   <% if session[:source] %>
