--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -20,10 +20,7 @@
     <%= login_helper %>
 
   <%= yield %>
-  
 
-  <% if session[:source] %>
-    <p>Thanks for visiting me from <%= session[:source] %></p>
-  <% end %>
+  <%= source_helper("applicarion") %>
   </body>
 </html>
