Integrated helper methods from ActionView

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,5 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
-l
+<p><%= number_to_phone "947214192" %></p>
+<p><%= number_to_currency"947214192" %></p>
+<p><%= number_to_percentage "80.4" %></p>
+<p><%= number_with_delimiter "1258494034893843" %></p>
