--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,5 +1,8 @@
+@import 'tailwindcss/base.css'; 
+@import 'tailwindcss/components.css';
+@import 'tailwindcss/utilities.css';
 body {
-    background-color: grey;
+    // background-color: grey;
 }
 
 .bottom a{
