--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -1,10 +1,9 @@
-    <tr>
-      <td><%= blog.title.upcase %></td>
-      <td><%= distance_of_time_in_words(blog.created_at, Time.now) %></td>
-      <td><%- blog.body %></td>
-      <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
-      <td><%= link_to "Show", blog %></td>
-      <td><%= link_to "Edit", edit_blog_path(blog) %></td>
-      <td><%= link_to "Show this blog", blog %> </td>
-      <td><%= link_to "Delete Post", blog, method: :delete, data: { confirm: 'Are you sure '} %></td>
-    </tr>
+<tr>
+  <td><%= blog.title.upcase %></td>
+  <td>Published <%= distance_of_time_in_words(blog.created_at, Time.now) %> ago</td>
+  <td><%= blog.body %></td>
+  <td><%= link_to blog.status, toggle_status_blog_path(blog) %></td>
+  <td><%= link_to 'Show', blog %></td>
+  <td><%= link_to 'Edit', edit_blog_path(blog) if logged_in?(:site_admin) %></td>
+  <td><%= link_to 'Delete Post', blog, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %></td>
+</tr>
