--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,25 +1,22 @@
-<p style="color: green"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 
 <h1>Blogs</h1>
 
-<div id="blogs">
 <table>
   <thead>
     <tr>
       <th>Blog Title</th>
       <th>Date</th>
-      <th>Body </th>
+      <th>Body</th>
       <th colspan="4"></th>
     </tr>
   </thead>
+
   <tbody>
     <%= render @blogs %>
   </tbody>
 </table>
 
 <br>
-<%= link_to "New blog", new_blog_path %>
 
-</div>
-
-
+<%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
