--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -9,13 +9,13 @@
     <p>Description: <%= portfolio_item.body %></p>
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
     <tr>
-    <td><%= link_to "Edit", edit_portfolio_path(portfolio_item) %></td>
+    <td><%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %></td>
     <td>
     <%= link_to 'Destroy', portfolio_item,
               data: {
                 "turbo-method": :delete,
                 
-              } %>
+              } if logged_in?(:site_admin) %>
    
           <td>
     </tr>
