--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -5,8 +5,8 @@
         <div class="flex lg:flex-1">
           <a href="#" class="-m-1.5 p-1.5">
             <span class="sr-only">Cesar Casares</span>
-            <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
-          </a>
+            <h1 class="text-sm font-semibold text-gray-900">Cesar Casares</h1>
+        </a>
         </div>
         <div class="flex lg:hidden">
           <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
@@ -17,15 +17,15 @@
           </button>
         </div>
         <div class="hidden lg:flex lg:gap-x-12">
-            <%= link_to "Home", root_path, class: "text-sm font-semibold leading-6 text-black" %>
-            <%= link_to "About", about_me_path, class: "text-sm font-semibold leading-6 text-black" %>
-            <%= link_to "Contact", contact_path, class: "text-sm font-semibold leading-6 text-black" %>
-            <%= link_to "Blog", blogs_path, class: "text-sm font-semibold leading-6 text-black" %>
-            <%= link_to "Portfolio", portfolios_path, class: "text-sm font-semibold leading-6 text-black" %>
+            <%= link_to "Home", root_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+            <%= link_to "About", about_me_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+            <%= link_to "Contact", contact_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+            <%= link_to "Blog", blogs_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+            <%= link_to "Portfolio", portfolios_path, class: "text-sm font-semibold leading-6 text-gray-900" %>
+
           <%= login_helper %> 
         </div>
         <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-          <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Log in <span aria-hidden="true">&rarr;</span></a>
         </div>
       </nav>
       <!-- Mobile menu, show/hide based on menu open state. -->
@@ -36,7 +36,7 @@
           <div class="flex items-center justify-between">
             <a href="#" class="-m-1.5 p-1.5">
               <span class="sr-only">Your Company</span>
-              <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+              <h1 class="text-sm font-semibold leading-6 text-gray-900">Cesar Casares</h1>
             </a>
             <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
               <span class="sr-only">Close menu</span>
@@ -47,7 +47,7 @@
           </div>
           <div class="mt-6 flow-root">
             <div class="-my-6 divide-y divide-gray-500/10">
-              <div class="space-y-2 py-6 <%= location %>">
+              <div class="space-y-2 py-6">
                 <%= link_to "Home", root_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" %>
                 <%= link_to "About", about_me_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" %>
                 <%= link_to "Contact", contact_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" %>
@@ -55,9 +55,7 @@
                 <%= link_to "Portfolio", portfolios_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" %>
 
               </div>
-              <div class="py-6">
-                <a href="#" class="-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
-              </div>
+  
             </div>
           </div>
         </div>
