--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,8 +1,8 @@
 
 body{
-    background-color: bisque;
+    // background-color: bisque;
 }
 
-.top a{
-    color: red;
-}
+// .top a{
+//     color: red;
+// }
