Updated styles and added map for contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,21 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "947214192" %></p>
-<p><%= number_to_currency"947214192" %></p>
-<p><%= number_to_percentage "80.4" %></p>
-<p><%= number_with_delimiter "1258494034893843" %></p>
+<h1>¿Te gustaria trabajar con nosotros?</h1>
+
+<hr>
+
+<div class="grid grid-flow-row auto-rows-max">
+    <div>
+        <h3>Office Address</h3>
+        <p>7150 E Camelback Rd, Suite 444, Scottsdale, AZ  85251</p>
+        <h3>Phone</h3>
+        <p><%= number_to_phone "3242343242" %></p>
+        <h3>Email</h3>
+        <a href="mailto:cacjmuse@gmail.com"><button class="bg-sky-500 hover:bg-sky-700">
+            Email me</a></button></a>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.4409960538487!2d-72.40151282418286!3d5.349464094629248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e6b0dd349830a09%3A0x1af1478035a1e5e1!2sCunaguaro%20Travel!5e0!3m2!1sen!2spe!4v1706583795629!5m2!1sen!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+
+
+    
+</div>
+
